kong-apigateway/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serverless
  namespace: default
  annotations:
    konghq.com/override: kong-ingress
    konghq.com/plugins: serverless
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: consumer
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
